  - Projects search on dashboard page
  - Improved runners page
  - Running and Pending tabs on admin builds page
  - Fix [ci skip] tag, so you can skip CI triggering now
  - Add HipChat notifications
  - Clean up project advanced settings.
  - Add a GitLab project path parameter to the project API
  - Remove projects IDs from dashboard
  - UI fix: Remove page headers from the admin area

v7.10.1
  - Fix failing migration when update to 7.10 from 7.8 and older versions

v7.10.0
  - Projects sorting by last commit date
  - Add project search at runner page
  - Fix GitLab and CI projects collision
  - Events for admin
  - Events per projects
  - Search for runners in admin area
  - UI improvements: created separated admin section, removed useless project show page
  - Runners sorting in admin area (by id)
  - Remove protected_attributes gem
  - Skip commit creation if there is no appropriate job
  
v7.9.3
  - Contains no changes
  - Developers can cancel and retry jobs

v7.9.2
  - [Security] Already existing projects should not be served by shared runners
  - Ability to run deploy job without test jobs (every push will trigger deploy job)

v7.9.1
  - [Security] Adding explicit is_shared parameter to runner
  - [Security] By default new projects are not served by shared runners

v7.9.0
  - Reset user session if token is invalid
  - Runner delete api endpoint
  - Fix bug about showing edit button on commit page if user does not have permissions
  - Allow to pass description and tag list during Runner's registration
  - Added api for project jobs
  - Implementation of deploy jobs after all parallel jobs(tests).
  - Add scroll up/down buttons for better mobile experience with large build traces
  - Add runner last contact (Kamil Trzciński)
  - Allow to pause runners - when paused runner will not receive any new build (Kamil Trzciński)
  - Add brakeman (security scanner for Ruby on Rails)
  - Changed a color of the canceled builds