@@ -2,14 +2,12 @@
   %h1{style: "background: #c40834; color: #FFF; font: normal 20px Helvetica, Arial, sans-serif; margin: 0; padding: 5px 10px; line-height: 32px; font-size: 16px;"}
     GitLab CI (build failed)
 %h3
-  Build failed for
+  Project:
   = link_to project_url(@project) do
     = @project.name
 
 %p
-  Status: #{@build.status}
-%p
-  Commit: #{@build.commit.short_sha}
+  Commit link: #{gitlab_commit_link(@project, @build.commit.short_sha)}
 %p
   Author: #{@build.commit.git_author_name}
 %p
@@ -18,4 +16,4 @@
   Message: #{@build.commit.git_commit_message}
 
 %p
-  Url: #{link_to @build.short_sha, project_build_url(@build.project, @build)}
+  Url: #{link_to @build.short_sha, project_build_url(@project, @build)}
