@@ -3,14 +3,12 @@
     GitLab CI (build successful)
 
 %h3
-  Build successful for
+  Project:
   = link_to project_url(@project) do
     = @project.name
 
 %p
-  Status: #{@build.status}
-%p
-  Commit: #{@build.commit.short_sha}
+  Commit link: #{gitlab_commit_link(@project, @build.commit.short_sha)}
 %p
   Author: #{@build.commit.git_author_name}
 %p
@@ -19,4 +17,4 @@
   Message: #{@build.commit.git_commit_message}
 
 %p
-  Url: #{link_to @build.short_sha, project_build_url(@build.project, @build)}
+  Url: #{link_to @build.short_sha, project_build_url(@project, @build)}
